menu overlaped by page content fixed

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -32,6 +32,7 @@
     width: 10rem;
     border-radius: 4px;
     box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.3);
+    z-index: 2;
     .nav__item {
       padding: 1rem;
       border-radius: 4px;
